# ecal-rs

./: CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  build.rs
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  build_test_publish.yml  check.yml  format.yml  on_pr.yml  publish-ecal-derive.yml  publish-ecal.yml  publish.yml
demo/: Cargo.toml  Ping.proto  README.md  build.rs
demo/src/: ecal_rs.rs  main.rs
ecal-derive/: Cargo.toml
ecal-derive/src/: lib.rs
src/: lib.rs  sys.rs
