[package]
name = "ecal"
version = "0.1.0"
authors = [
    "Chip Collier <chip@kopernikusauto.com>",
    "Denys Zariaiev <denys@kopernikusauto.com>",
    "Massimo Innocentini <massimo@kopernikusauto.com>",
    "Ignat Georgiev <ignat@kopernikusauto.com>"
]
edition = "2018"
publish = false
description = "Bindings to the eCAL library"

[features]
default = ["derive", "use_prost"]
derive = ["ecal-derive"]
use_protobuf = ["protobuf"]
use_prost = ["prost"]
use_msgpack = ["rmp", "rmpv", "rmp-serde", "serde"]

[dependencies]
anyhow = "1.0"
thiserror = "1"
log = "0.4"
prost = { version="0.7", optional=true }
protobuf = { version="2", optional=true }
rmp = { version="0.8", optional=true }
rmpv = { version="0.4", optional=true }
rmp-serde = { version="0.15", optional=true }
serde = { version="1.0", optional=true }

[target.'cfg(windows)'.dependencies]
winapi = { version="0.3", features=["iphlpapi"]}

[dependencies.ecal-derive]
version = "0.1"
path = "./ecal-derive"
optional = true

[dev-dependencies]
env_logger = "0.8"

[workspace]
members = [
    "demo"
]