[package]
name = "ecal"
version = "0.2.0"
authors = [
    "Chip Collier <chip@kopernikusauto.com>",
    "Denys Zariaiev <denys@kopernikusauto.com>",
    "Massimo Innocentini <massimo@kopernikusauto.com>",
    "Ignat Georgiev <ignat@kopernikusauto.com>"
]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/kopernikusauto/ecal-rs/"
publish = ["crates-io"]
description = "Bindings to the eCAL library"
keywords = ["ecal"]

[features]
default = ["derive", "use_prost"]
derive = ["ecal-derive"]
use_protobuf = ["protobuf"]
use_prost = ["prost"]
use_msgpack = ["rmp", "rmpv", "rmp-serde", "serde"]
use_capnp = ["capnp"]

[dependencies]
anyhow = "1.0"
thiserror = "1"
log = "0.4"
prost = { version="0.11", optional=true }
protobuf = { version="3", optional=true }
rmp = { version="0.8", optional=true }
rmpv = { version="1.0", optional=true }
rmp-serde = { version="1.1", optional=true }
serde = { version="1.0", optional=true }
capnp = { version="0.16.0", optional=true }

[target.'cfg(windows)'.dependencies]
winapi = { version="0.3", features=["iphlpapi"]}

[dependencies.ecal-derive]
version = "0.1"
path = "./ecal-derive"
optional = true

[dev-dependencies]
env_logger = "0.9"

[workspace]
members = [
    "demo"
]
