[package]
name = "ecal_ping_demo"
version = "0.1.0"
authors = ["Chip Collier <chip@kopernikusauto.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
ctrlc = "3.1"
ecal = { path="../" }
prost = "0.7"
log = "0.4"
clap = "3.0.0-beta.2"

[build-dependencies]
prost-build = "0.6.1"
protoc-rust = "2"