[package]
name = "ecal_ping_demo"
version = "0.1.0"
authors = ["Chip Collier <chip@kopernikusauto.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
ctrlc = "3.2"
ecal = { path="../" }
prost = "0.11"
log = "0.4"
clap = "3.2.16"

[build-dependencies]
prost-build = "0.11.1"
protoc-rust = "2"
